; ModuleID = '/home/carl/AnghaBench/lab/engine/code/sys/extr_sys_main.c_Sys_In_Restart_f.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/sys/extr_sys_main.c_Sys_In_Restart_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SDL_INIT_VIDEO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"in_restart: Cannot restart input while video is shutdown\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Sys_In_Restart_f() #0 {
  %1 = load i32, i32* @SDL_INIT_VIDEO, align 4
  %2 = call i32 @SDL_WasInit(i32 %1)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = call i32 @Com_Printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0))
  br label %8

6:                                                ; preds = %0
  %7 = call i32 (...) @IN_Restart()
  br label %8

8:                                                ; preds = %6, %4
  ret void
}

declare dso_local i32 @SDL_WasInit(i32) #1

declare dso_local i32 @Com_Printf(i8*) #1

declare dso_local i32 @IN_Restart(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
